graphics/css/GBA_2p.css
/* Runner and pronouns panel. */
.runner-container, .comms-container {
	width: 483px;
	height: 74px;
	line-height: 74px;
	
	padding-left: 10px;
	padding-right: 10px;
}

/* Runner name dynamic text. */
.runner-name {
	/* max-width: 430px; */
	font-size: 26pt;
}

/* Player 1 info position. */
#runner-container1 {
	left: 450px;
	top: 654px;
}

/* Player 2 info position. */
#runner-container2 {
	left: 968px;
	top: 654px;
}

/* Commentator name and pronouns panel. */
.comms-pronouns {
	font-size: 20pt;
}

/* Comms 1 info position. */
#comms-container1 {
	left: 450px;
	top: 741px;
}

/* Comms 2 info position. */
#comms-container2 {
	left: 968px;
	top: 741px;
}

/* Game name panel. */
#game-name {
	width: 635px;
	height: 100px;
	line-height: 100px;
	left: 815px;
	top: 830px;
	
	padding-left: 10px;
	padding-right: 10px;
}

/* Category and estimate panel. */
#info-container {
	width: 635px;
	height: 35px;
	line-height: 35px;
	left: 815px;
	top: 932px;
	
	padding-left: 10px;
	padding-right: 10px;
}

/* Timer panel. */
#timer {
	width: 350px;
	height: 100px;
	line-height: 100px;
	left: 450px;
	top: 830px;
	font-size: 55pt;
}

/* Estimate panel. */
#estimate-container {
	position: absolute;
	left: 450px;
	top: 931px;
}

